# geoOpp

./: build.gradle
app/: AndroidManifest.xml  build.gradle  google-services.json
app/geoop/: AnotherActivity.kt  AppAlarm.kt  AppDatabase.kt  AppDatabaseCallback.kt  AppLocationService.kt  AppRepository.kt  AppViewModel.kt  AppViewPagerAdapter.kt  AssignmentDao.kt  AssignmentModel.kt  AssignmentsAdapter.kt  AssignmentsFragment.kt  BootUpReceiver.kt  CompletedAdapter.kt  CompletedFragment.kt  InfoFragment.kt  LocationUpdateService.kt  MainActivity.kt  SQLModel.kt  SocketClient.kt
app/layout/: activity_another.xml  activity_main.xml  fragment_assignments.xml  fragment_completed.xml  fragment_info.xml  recycler_assignments.xml  recycler_completed.xml
app/values/: strings.xml
ws_tracking/: Cargo.toml  Rocket.toml
ws_tracking/src/: main.rs  socket.rs
ws_tracking/templates/: base.html  base.html.tera  index.html  index.html.tera
ws_tracking/templates/resources/: map.html.tera  openlayers.html.tera  script.html.tera  socket.html.tera  style.html.tera
